--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.cdnfonts.com/css/product-sans');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -69,6 +70,7 @@
 @layer base {
   * {
     @apply border-border;
+    font-family: 'Product Sans', 'ui-sans-serif';
   }
   body {
     @apply bg-background text-foreground;
