--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.cdnfonts.com/css/product-sans');
+@import url('https://fonts.cdnfonts.com/css/open-sans');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -70,7 +70,7 @@
 @layer base {
   * {
     @apply border-border;
-    font-family: 'Product Sans', 'ui-sans-serif';
+    font-family: 'Open Sans', 'ui-sans-serif';
   }
   body {
     @apply bg-background text-foreground;
