--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/open-sans');
+@import url('https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.cs');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
